# Kodiak

./: .gitignore  CMakeLists.txt  Makefile  POWER BY JEFFREY  README.html  README.md
CMake/: FindFILIB.cmake
examples/: CMakeLists.txt  Makefile  bifurcation.cpp  minmax.cpp  paving.cpp  small.cpp
kdks/: bifurcation.kdk  bifurcation1.kdk  bifurcation2.kdk  bifurcation3.kdk  bifurcation4.kdk  bifurcation5.kdk  kodiak_parser_parsetab.py  mms.kdk  mms1.kdk  mms2.kdk  paver.kdk  paver1.kdk  paver2.kdk  paver3.kdk  paver4.kdk  paver5.kdk  paver6.kdk  paver7.kdk
logo/: credits.txt
python/: Bifurcation.cpp  Bifurcation.hpp  Makefile  Messenger.cpp  Messenger.hpp  Problem.cpp  Problem.hpp  bifurcation.m  format.m  help.txt  interface.pyx  kodiak.cpp  kodiak.py  kodiak_parser.py  kodiakmessages.proto  parser.py  parser_test.py  server.py  setup.py  smt_parser.py  wrapper.cpp  wrapper.hpp
python/ply/: cpp.py  lex.py  parser.out  parsetab.py  yacc.py
src/: Bifurcation.cpp  Bifurcation.hpp  Bool.cpp  Bool.hpp  BooleanChecker.cpp  BooleanChecker.hpp  BranchAndBoundDF.hpp  Environment.cpp  Environment.hpp  LegacyBool.cpp  LegacyBool.hpp  Makefile  MinMax.cpp  MinMax.hpp  MinMaxSystem.cpp  MinMaxSystem.hpp  NewMinMaxSystem.cpp  NewMinMaxSystem.hpp  NewPaver.cpp  NewPaver.hpp  Node.cpp  Node.hpp  Paver.cpp  Paver.hpp  Real.cpp  Real.hpp  System.cpp  System.hpp  Value.hpp  kodiak.hpp  types.cpp  types.hpp
src/Adapters/: Codiak.cpp  Codiak.h  PRECiSA.cpp  PRECiSA.hpp
src/Expressions/Boolean/: AndNode.cpp  AndNode.hpp  Bool.cpp  Bool.hpp  Certainty.cpp  Certainty.hpp  ConstantNode.cpp  ConstantNode.hpp  ImplicationNode.cpp  ImplicationNode.hpp  InvalidBooleanNode.cpp  InvalidBooleanNode.hpp  LegacyCertainty.cpp  LegacyCertainty.hpp  Node.cpp  Node.hpp  NotNode.cpp  NotNode.hpp  OrNode.cpp  OrNode.hpp  RelationNode.cpp  RelationNode.hpp  VariableNode.cpp  VariableNode.hpp
